--- a/Energy Bill calculator .ipynb
+++ b/Energy Bill calculator .ipynb
@@ -3,7 +3,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# INTRODUCTION "
+        "# Energy Calculator for a Building\n",
+        "## INTRODUCTION \n"
       ],
       "metadata": {
         "id": "6C6OXbc3iLOg"
@@ -27,7 +28,7 @@
         "id": "016b9672"
       },
       "source": [
-        "# Energy calculator for HVAC \n",
+        "# Energy calculator of Building\n",
         "\n",
         "* Import the trained model - check the file to be attached - billcal_gbr.pkl \n",
         "* feed the values - [[ , , , , , ,]]    Instruction for feeding data is below "
